@@ -15,14 +15,16 @@ import java.util.List;
 
 public class Backpack {
     public static void main(String[] args) {
-        Item[] items = new Item[]{ // Исходный набор предметов
+        List<Item> items = List.of( // Исходный набор предметов
                 new Item("Sunscreen", 2, 3),
                 new Item("Travel Towel", 4, 8),
                 new Item("Camera", 6, 10),
                 new Item("Guide Book", 3, 5),
                 new Item("Swimsuit", 5, 9)
-        };
+        );
         int totalWeight = 10; // Максимальная вместимость рюкзака
+        List<Item> backpack = selectItems(items, totalWeight);
+        System.out.println(backpack);
     }
 
     public static List<Item> selectItems(List<Item> allItems, int totalWeight) {
@@ -33,10 +35,10 @@ public class Backpack {
 
         List<Item> allItemsCopy = new ArrayList<>(allItems);
 
-        allItemsCopy.sort((i1, i2) -> Integer.compare(i2.unit_value, i1.unit_value));
+        allItemsCopy.sort(Comparator.comparingInt((Item i) -> -i.unit_value).thenComparing((Item i) -> i.weight));
 
         List<Item> selectedItems = new ArrayList<>();
-        Item currentItem = allItemsCopy.getFirst();
+        Item currentItem = allItemsCopy.get(0);
         int i = 1;
         while (totalWeight >= currentItem.weight) {
             totalWeight -= currentItem.weight;
@@ -45,5 +47,4 @@ public class Backpack {
         }
         return selectedItems;
     }
-
 }
